--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,4 +10,10 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div>
+    <div><p>Login</p><p>Password</p></div>
+    <div><ion-input placeholder="Enter Login" fill="outline"></ion-input><ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input></div>
+    <span>Already have an account?<ion-button (click)="navigateToSignupPage()">Sign up</ion-button></span>
+    <ion-button (click)="navigateToHomePage()">Login</ion-button>
+  </div>
 </ion-content>
