--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -10,4 +10,14 @@
       <ion-title size="large">signup</ion-title>
     </ion-toolbar>
   </ion-header>
+  <div>
+    <div><p>Login</p><p>Password</p><p>Password again</p></div>
+    <div>
+      <ion-input placeholder="Enter Login" fill="outline"></ion-input>
+      <ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input>
+      <ion-input placeholder="Enter Password Again" fill="outline" type="password"></ion-input>
+    </div>
+    <span>Already have an account?<ion-button (click)="navigateToLoginPage()">Login</ion-button></span>
+    <ion-button (click)="navigateToHomePage()">Register</ion-button>
+  </div>
 </ion-content>
