--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
         Blank
       </ion-title>
     </ion-toolbar>
-    <ion-button>QR</ion-button>
+    <ion-button (click)="QRPage()">QR</ion-button>
   </div>
 </ion-header>
 
