--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,19 +1,21 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div>
-    <div><p>Login</p><p>Password</p></div>
-    <div><ion-input placeholder="Enter Login" fill="outline"></ion-input><ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input></div>
-    <span>No accounts?<ion-button (click)="navigateToSignupPage()">Sign up</ion-button></span>
-    <ion-button (click)="navigateToHomePage()">Login</ion-button>
+  <div class="flex-center">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Login</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Login</ion-label>
+          <ion-input placeholder="Enter Login" fill="outline"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input>
+        </ion-item>
+        <ion-button color="dark" fill="clear" (click)="navigateToSignupPage()">No accounts? Sign up</ion-button>
+        <ion-button color="success" (click)="navigateToHomePage()">Login</ion-button>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
