--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -1,23 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>signup</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">signup</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div>
-    <div><p>Login</p><p>Password</p><p>Password again</p></div>
-    <div>
-      <ion-input placeholder="Enter Login" fill="outline"></ion-input>
-      <ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input>
-      <ion-input placeholder="Enter Password Again" fill="outline" type="password"></ion-input>
-    </div>
-    <span>Already have an account?<ion-button (click)="navigateToLoginPage()">Login</ion-button></span>
-    <ion-button (click)="navigateToHomePage()">Register</ion-button>
+  <div class="flex-center">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Login</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="floating">Login</ion-label>
+          <ion-input placeholder="Enter Login" fill="outline"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <ion-input placeholder="Enter Password" fill="outline" type="password"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="floating">Confirm Password</ion-label>
+          <ion-input placeholder="Confirm Password" fill="outline" type="password"></ion-input>
+        </ion-item>
+        <ion-button color="dark" fill="clear" (click)="navigateToLoginPage()">Have an account? Login</ion-button>
+        <ion-button color="success" (click)="navigateToHomePage()">Sign up</ion-button>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
