--- a/src/app/pages/welcome/welcome.page.html
+++ b/src/app/pages/welcome/welcome.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>welcome</ion-title>
+    <ion-title>Scanner</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">welcome</ion-title>
+      <ion-title size="large">Scanner</ion-title>
     </ion-toolbar>
   </ion-header>
 </ion-content>
