--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,12 @@
 <ion-header [translucent]="true">
-  <div>
-    <ion-toolbar>
+  <ion-toolbar>
+    <div class="flex-between">
       <ion-title>
         Blank
       </ion-title>
-    </ion-toolbar>
-    <ion-button (click)="QRPage()">QR</ion-button>
-  </div>
+      <ion-button (click)="QRPage()">QR</ion-button>
+    </div>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
