--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,21 +1,10 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <div class="flex-between">
-      <ion-title>
-        Blank
-      </ion-title>
-      <ion-button (click)="QRPage()">QR</ion-button>
-    </div>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
+    <div class="flex-between">
+      <ion-toolbar>
+        <ion-title size="large">Contacts</ion-title>
+      </ion-toolbar>
+      <ion-button fill="clear" (click)="QRPage()"><ion-icon name="barcode-outline"></ion-icon></ion-button>
+    </div>
   <div id="container">
     <ion-list [inset]="true">
       <ion-item>
