--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,12 @@
 <ion-content [fullscreen]="true">
+  <ion-header>
     <div class="flex-between">
       <ion-toolbar>
         <ion-title size="large">Contacts</ion-title>
       </ion-toolbar>
       <ion-button fill="clear" (click)="QRPage()"><ion-icon name="barcode-outline"></ion-icon></ion-button>
     </div>
+  </ion-header>
   <div id="container">
     <ion-list [inset]="true">
       <ion-item>
@@ -21,6 +23,12 @@
       </ion-item>
       <ion-item>
         <ion-label>Super Mario World</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Winner</ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-label>Super</ion-label>
       </ion-item>
     </ion-list>
   </div>
