--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,7 +4,7 @@
       <ion-toolbar>
         <ion-title size="large">Contacts</ion-title>
       </ion-toolbar>
-      <ion-button fill="clear" (click)="QRPage()"><ion-icon name="barcode-outline"></ion-icon></ion-button>
+      <ion-button fill="clear" (click)="scan()" [disabled]="!isSupported"><ion-icon name="scan"></ion-icon></ion-button>
     </div>
   </ion-header>
   <div id="container">
