--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,11 +24,12 @@
       <ion-item>
         <ion-label>Super Mario World</ion-label>
       </ion-item>
-      <ion-item>
-        <ion-label>Winner</ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-label>Super</ion-label>
+    </ion-list>
+    <ion-list>
+      <ion-item *ngFor="let c of contacts">
+        <ion-label>
+          {{c?.name?.display}}
+        </ion-label>
       </ion-item>
     </ion-list>
   </div>
