--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -16,7 +16,10 @@
             <ion-input placeholder="Enter Password" fill="outline" type="password" formControlName="password"></ion-input>
           </ion-item>
           <ion-label color="danger">{{message2}}</ion-label>
-          <ion-button color="success" [disabled]="!form.valid" (click)="navigateToHomePage()">Login</ion-button>
+          <div class="flex-between">
+            <ion-label color="danger" *ngIf="!form.valid">Min 6 characters</ion-label>
+            <ion-button color="success" [disabled]="!form.valid" (click)="navigateToHomePage()">Login</ion-button>
+          </div>
         </ion-card-content>
       </ion-card>
     </form>
