--- a/src/global.scss
+++ b/src/global.scss
@@ -36,3 +36,8 @@
   justify-content: space-between;
   padding: 10px 20px 5px;
 }
+.flex-column {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
