--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,15 +1,15 @@
-<ion-content [fullscreen]="true">
-  <ion-header>
+<ion-header>
+  <ion-toolbar>
     <div class="flex-between">
-      <ion-toolbar>
-        <ion-title size="large">Contacts</ion-title>
-      </ion-toolbar>
+      <ion-title size="large">Contacts</ion-title>
       <ion-button fill="clear" (click)="scan()" [disabled]="!isSupported"><ion-icon name="scan"></ion-icon></ion-button>
     </div>
-  </ion-header>
-  <div id="container" style="height: 350px" scrollY="true">
+  </ion-toolbar>
+</ion-header>
+<ion-content [fullscreen]="true">
+  <div id="contaioner">
     <ion-list>
-      <ion-item *ngFor="let c of contacts">
+      <ion-item *ngFor="let c of contacts" button="true" (click)="showDetail()">
         <ion-label>
           {{c?.name?.display}}
           <p>{{join(c?.phones)}}</p>
