--- a/src/app/second/second.page.html
+++ b/src/app/second/second.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <div class="flex-between">
       <ion-buttons>
-        <ion-back-button></ion-back-button>
+        <ion-back-button (click)="goBack()"></ion-back-button>
       </ion-buttons>
       <ion-title>Full information</ion-title>
     </div>
